--- a/views/board/board.ejs
+++ b/views/board/board.ejs
@@ -36,6 +36,11 @@
 
         <div class="row mt-3 justify-content-center d-flex">
             <ul class="pagination">
+                    <% if (p.prev) { %>
+                        <li class="page-item">
+                            <a class="page-link" href="/board?p=<%= page = 1 %>">처음</a>
+                        </li>
+                    <% } %>
                 <% if (p.prev) { %>
                     <li class="page-item">
                         <a class="page-link" href="/board?p=<%= p.startPage - 1 %>">이전</a>
@@ -49,6 +54,11 @@
                 <% if (p.next) { %>
                     <li class="page-item">
                         <a class="page-link" href="/board?p=<%= p.endPage + 1 %>">다음</a>
+                    </li>
+                <% } %>
+                <% if (p.next) { %>
+                    <li class="page-item">
+                        <a class="page-link" href="/board?p=<%= p.totalPage %>">끝</a>
                     </li>
                 <% } %>
             </ul>
